--- a/templates/base.html
+++ b/templates/base.html
@@ -26,32 +26,36 @@
 <body>
    <div class="page-container position-relative">
       <!-- Navbar -->
-      <div class="container-fluid p-0">
-         <nav class="navbar navbar-expand-lg navbar-light">
-            <a href="{% url 'home' %}">
-               <h1 class="navbar-brand mb-0">dixon grossnickle</h1>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                     <a class="nav-link" href="{% url 'home' %}">home</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="{% url 'sim_home' %}">simulator</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="#contact">contact</a>
-                  </li>
-               </ul>
-            </div>
-         </nav>
-         <noscript>
-            <p>This page won't work without JavaScript – make sure it's enabled in your browser settings.</p>
-         </noscript>
+      <div class="row no-gutters justify-content-center">
+         <div class="col-11 col-md-10 col-lg-9 col-xl-8 pt-4 pb-md-4">
+            <nav class="navbar navbar-expand-lg navbar-light">
+               <a href="{% url 'home' %}">
+                  <h1 class="navbar-brand mb-0">dixon grossnickle</h1>
+               </a>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                  <ul class="navbar-nav ml-auto">
+                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home' %}">home</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'sim_home' %}">simulator</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#contact">contact</a>
+                     </li>
+                  </ul>
+               </div>
+            </nav>
+         </div>
       </div>
+      <noscript>
+         <p>This page won't work without JavaScript – make sure it's enabled in your browser settings.</p>
+      </noscript>
+
+      <!-- Content -->
       <div class="content-wrap">
          <div class="container">
             <div class="row main-row justify-content-center">
@@ -60,6 +64,7 @@
          </div>
          {% block carousel %}{% endblock %}
       </div>
+      
       <!-- Footer -->
       <section id="contact" class="position-absolute w-100">
          <div class="container-fluid footer-container text-center">
